--- a/starter/app/src/main/res/navigation/shoe_nav.xml
+++ b/starter/app/src/main/res/navigation/shoe_nav.xml
@@ -39,6 +39,9 @@
         <action
             android:id="@+id/actionShoeListingsToShoeDetails"
             app:destination="@id/shoeDetailsFragment" />
+        <action
+            android:id="@+id/actionShoeListingsToShoelogin"
+            app:destination="@id/loginDestination" />
     </fragment>
     <fragment
         android:id="@+id/shoeDetailsFragment"
