--- a/starter/app/src/main/res/layout/shoe_list_item.xml
+++ b/starter/app/src/main/res/layout/shoe_list_item.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.shoeList.ShoeListFragment">
 
 
 
@@ -9,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
-        android:theme="@style/Theme.MaterialComponents.Light"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="6dp"
